force-app/main/default/objects/Plan_Step__c/Plan_Step__c.object-meta.xml
<CustomObject>
    <label>Plan Step</label>
    <nameField>
        <label>Plan Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>