force-app/main/default/objects/Plan_Step__c/fields/Associate_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Associate_Case_Status__c</fullName>
    <label>Associated Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>