force-app/main/default/objects/Plan_Step__c/fields/Case_Plan__c.field-meta.xml
<CustomField>
    <fullName>Case_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Plan</label>
    <referenceTo>Case_Plan__c</referenceTo>
    <relationshipLabel>Plan Steps</relationshipLabel>
    <relationshipName>Plan_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>