force-app/main/default/objects/Plan_Step__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <label>Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>