force-app/main/default/objects/Plan_Step__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <formula>&quot;Plan_Step__c&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object API Name</label>
    <type>Text</type>
</CustomField>