force-app/main/default/objects/Plan_Step__c/fields/Picklist_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Field_API_Name__c</fullName>
    <defaultValue>&quot;Start_When__c&quot;</defaultValue>
    <label>Picklist Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>