force-app/main/default/objects/Plan_Step__c/fields/Start_When__c.field-meta.xml
<CustomField>
    <fullName>Start_When__c</fullName>
    <label>Start_When__c</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Step 2</fullName>
            </value>
            <value>
                <fullName>Step1</fullName>
            </value>
            <value>
                <fullName>st1</fullName>
            </value>
            <value>
                <fullName>Clear Record</fullName>
            </value>
            <value>
                <fullName>Wait For Approval</fullName>
            </value>
            <value>
                <fullName>Send Approval Request</fullName>
            </value>
            <value>
                <fullName>Create Contact</fullName>
            </value>
            <value>
                <fullName>Create Account</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Create User</fullName>
            </value>
            <value>
                <fullName>Create Account`</fullName>
            </value>
            <value>
                <fullName>Send Email Test Button Width ABCDEF</fullName>
            </value>
            <value>
                <fullName>asdfasdf</fullName>
            </value>
            <value>
                <fullName>TestAdmin1</fullName>
            </value>
            <value>
                <fullName>JD Step 1SD</fullName>
            </value>
            <value>
                <fullName>NewTestStep</fullName>
            </value>
            <value>
                <fullName>JDtest sttep</fullName>
            </value>
            <value>
                <fullName>JDStep1</fullName>
            </value>
            <value>
                <fullName>JDTest Step 1</fullName>
            </value>
            <value>
                <fullName>Test Step 1 Case Plan 1</fullName>
            </value>
            <value>
                <fullName>Test Plan</fullName>
            </value>
            <value>
                <fullName>SD new Steps 1</fullName>
            </value>
            <value>
                <fullName>SD New Steps</fullName>
            </value>
            <value>
                <fullName>SD New Plan Step</fullName>
            </value>
            <value>
                <fullName>JD Step 2</fullName>
            </value>
            <value>
                <fullName>Step 3</fullName>
            </value>
            <value>
                <fullName>Step 1</fullName>
            </value>
            <value>
                <fullName>Test Case Step new Flow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>