force-app/main/default/objects/Plan_Step__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <formula>Object_API_Name__c + &#39;&#39; + &#39;Start When&#39; + &#39;&#39; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>